--- a/Back-end/pom.xml
+++ b/Back-end/pom.xml
@@ -79,6 +79,11 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.github.marlonlom</groupId>
+			<artifactId>timeago</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-jackson</artifactId>
 			<scope>runtime</scope>
