add group posts

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.mail.username=cce14efba457cc
 spring.mail.password=fff86f719d6e46
 spring.mail.protocol=smtp
 ############ JWT Properties #####################
-jwt.expiration.time=90000
+jwt.expiration.time=3600000
 server.port= 8181
