group join request/response

--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.mail.protocol=smtp
 ############ JWT Properties #####################
 jwt.expiration.time=3600000
 server.port= 8181
+
+spring.jackson.serialization.fail-on-empty-beans=false
