--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -17,9 +17,12 @@
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
+    "@angular/localize": "~10.0.9",
+    "@angular/material": "^10.2.2",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
