--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/select-country": "^2.2.0",
     "@angular/animations": "~10.0.9",
     "@angular/cdk": "^10.2.2",
     "@angular/common": "~10.0.9",
