--- a/Back-end/src/main/resources/application.properties
+++ b/Back-end/src/main/resources/application.properties
@@ -18,3 +18,5 @@ jwt.expiration.time=3600000
 server.port= 8181
 
 spring.jackson.serialization.fail-on-empty-beans=false
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
